[gd_scene load_steps=18 format=2]

[ext_resource path="res://ui/back_panel.png" type="Texture" id=1]
[ext_resource path="res://ui/upheavtt.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://ui/menu_button.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/summary_menu.gd" type="Script" id=4]
[ext_resource path="res://fish/a_button.png" type="Texture" id=5]
[ext_resource path="res://sound_effects/menu_up.wav" type="AudioStream" id=6]
[ext_resource path="res://sound_effects/slap.wav" type="AudioStream" id=7]
[ext_resource path="res://sound_effects/money.wav" type="AudioStream" id=8]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=5]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 71, 576 ), Vector2( 71, 36 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "scrolled_in"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TextureRect/Buttons:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("TextureRect/Summaries/Left/Prompt:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 71, 36 ), Vector2( 71, 576 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "scrolled_out"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=8]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect/Summaries/Left/Current:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 32, 32 ), Vector2( 10, 10 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LeftSlapPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=9]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("RightSlapPlayer:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Summary" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 71.0
margin_top = 576.0
margin_right = 952.0
margin_bottom = 1116.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Summaries" type="HBoxContainer" parent="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="Control" parent="TextureRect/Summaries"]
margin_left = 38.0
margin_right = 438.0
margin_bottom = 540.0
rect_min_size = Vector2( 400, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="TextureRect/Summaries/Left"]
margin_left = 90.5
margin_top = 141.0
margin_right = 290.5
margin_bottom = 185.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Prompt" type="AnimatedSprite" parent="TextureRect/Summaries/Left"]
visible = false
position = Vector2( 188.731, 317.335 )
frames = SubResource( 4 )
speed_scale = 0.25
playing = true

[node name="Stack" type="Node2D" parent="TextureRect/Summaries/Left"]

[node name="Current" type="Sprite" parent="TextureRect/Summaries/Left"]
position = Vector2( 190, 320 )
rotation = -0.312414
scale = Vector2( 32, 32 )
region_rect = Rect2( 0, 0, 32, 32 )

[node name="Right" type="Control" parent="TextureRect/Summaries"]
margin_left = 442.0
margin_right = 842.0
margin_bottom = 540.0
rect_min_size = Vector2( 400, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="TextureRect/Summaries/Right"]
margin_left = 90.5
margin_top = 141.0
margin_right = 290.5
margin_bottom = 185.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Prompt" type="AnimatedSprite" parent="TextureRect/Summaries/Right"]
visible = false
position = Vector2( 188.731, 317.335 )
frames = SubResource( 4 )
frame = 1
speed_scale = 0.25
playing = true

[node name="Stack" type="Node2D" parent="TextureRect/Summaries/Right"]

[node name="Current" type="Sprite" parent="TextureRect/Summaries/Right"]
position = Vector2( 190, 320 )
rotation = -0.312414
scale = Vector2( 10, 10 )
region_rect = Rect2( 0, 0, 32, 32 )

[node name="Buttons" type="HBoxContainer" parent="TextureRect"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -338.0
margin_top = -76.0
margin_right = 338.0
margin_bottom = -32.0
custom_constants/separation = 75
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayAgainButton" parent="TextureRect/Buttons" instance=ExtResource( 3 )]
margin_top = 0.0
margin_right = 210.0
margin_bottom = 44.0
focus_neighbour_right = NodePath("../ReturnToMainMenuButton")
text = "Play again"

[node name="ReturnToMainMenuButton" parent="TextureRect/Buttons" instance=ExtResource( 3 )]
margin_left = 285.0
margin_top = 0.0
margin_right = 676.0
margin_bottom = 44.0
focus_neighbour_left = NodePath("../PlayAgainButton")
text = "Return to main menu"

[node name="Label" type="Label" parent="TextureRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -107.5
margin_top = 47.0
margin_right = 107.5
margin_bottom = 91.0
custom_fonts/font = SubResource( 5 )
text = "SUMMARY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/scroll_in = SubResource( 6 )
anims/scroll_out = SubResource( 7 )

[node name="LeftFishAnimator" type="AnimationPlayer" parent="."]
anims/slap = SubResource( 8 )

[node name="RightFishAnimator" type="AnimationPlayer" parent="."]
anims/slap = SubResource( 9 )

[node name="AcceptSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "SFX"

[node name="FocusDefault" type="Button" parent="."]
margin_left = 490.286
margin_top = 1308.63
margin_right = 502.286
margin_bottom = 1328.63
focus_neighbour_left = NodePath("../TextureRect/Buttons/PlayAgainButton")
focus_neighbour_right = NodePath("../TextureRect/Buttons/ReturnToMainMenuButton")
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftSlapPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="RightSlapPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="LeftMoneyPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
bus = "SFX"

[node name="RightMoneyPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
bus = "SFX"
[connection signal="pressed" from="TextureRect/Buttons/PlayAgainButton" to="." method="_on_PlayAgainButton_pressed"]
[connection signal="pressed" from="TextureRect/Buttons/ReturnToMainMenuButton" to="." method="_on_ReturnToMainMenuButton_pressed"]
